double scrollbar fixed

--- a/main.css
+++ b/main.css
@@ -28,6 +28,10 @@ body {
     overflow-x: hidden;
 }
 
+.overflown {
+    overflow: hidden;
+}
+
 /* Nav */
 
 header {
